[B]Retrospect v5.1.4 - Changelog - 2020-01-05[/B]

This update contains some appearances fixes to both Retrospect and some Swedish channels.

[B]Framework related[/B]
-

[B]GUI/Settings/Language related[/B]
-

[B]Channel related[/B]
* Fixed: VRT.nu updated some HTML pages (Fixes #1276)
* Updated: thumbs/fanart for DPlay (Fixes #1277)
* Fixed: Kanal 5 and DPlay did not work (Fixes #1275)