@@ -1,7 +1,9 @@
 ﻿﻿﻿[B]Changelog[/B]
-* Fixed: Nickelodeon Sweden (Fixes #948)
+* Fixed: Use RTMPE for NickJr (Fixes #1279)
+* Fixed: Use HLS for Nickelodeon (Fixes #1279)
 
 [I]Previous changes[/I]
+* Fixed: Nickelodeon Sweden (Fixes #948)
 * Fixed: Nickelodeon channels (Fixes #911)
 * Added: NickJr NL and International
 * Fixed: Remove NickJR content from the main Nickelodeon channels as that content moved
