@@ -12,3 +12,5 @@ This update contains some appearances fixes to both Retrospect and some Swedish 
 * Fixed: VRT.nu updated some HTML pages (Fixes #1276)
 * Updated: thumbs/fanart for DPlay (Fixes #1277)
 * Fixed: Kanal 5 and DPlay did not work (Fixes #1275)
+* Fixed: Use RTMPE for NickJr (Fixes #1279)
+* Fixed: Use HLS for Nickelodeon (Fixes #1279)
